--- a/nf28.html
+++ b/nf28.html
@@ -415,6 +415,7 @@
 <body>
 
 <!-- Navbar -->
+<!--TODO href to position of page-->
 <nav class="n bi fj">
     <div class="nav-wrapper">
         <a href="startup-horizontal-half.html" class="brand-logo"><i class="icon-diamond white-text"></i></a>
