--- a/nf28.html
+++ b/nf28.html
@@ -450,21 +450,23 @@
         <div class="phone-preview"></div>
         <!--TODO add screenshot here-->
         <div class="image-container g"
-             style="background-image:url(//cdn.shopify.com/s/files/1/1775/8583/t/1/assets/poly5.jpg?0)"></div>
+             style="background-image:url(img/login.PNG)"></div>
         <div class="image-container"
-             style="background-image:url(//cdn.shopify.com/s/files/1/1775/8583/t/1/assets/poly3.jpg?0)"></div>
+             style="background-image:url(img/index.PNG)"></div>
         <div class="image-container"
-             style="background-image:url(//cdn.shopify.com/s/files/1/1775/8583/t/1/assets/poly2.jpg?0)"></div>
+             style="background-image:url(img/profil.PNG)"></div>
         <div class="image-container"
-             style="background-image:url(//cdn.shopify.com/s/files/1/1775/8583/t/1/assets/poly1.jpg?0)"></div>
+             style="background-image:url(img/friends.PNG)"></div>
+        <div class="image-container"
+             style="background-image:url(img/startgame.PNG)"></div>
     </div>
     <!--TODO add more pages here he is class left i think-->
     <div class="horizontal-half-wrapper he g">
         <div class="header-background l"></div>
         <div class="header-wrapper c valign-wrapper">
             <div class="d iv kw offset-m2 ci">
-                <h1>Startup!</h1>
-                <span class="dx">Welcome to cerveau royale.</span>
+                <h1>Cerveau Royal</h1>
+                <span class="dx">Le concept de Cerveau Royal consiste à répondre à des questions concernées des connaissances culturelles, géographique, historique, littérature ou bien artistique afin d’atteindre plus de points que le(s) joueur(s) adverse dans un temps plus court possible. Cerveau Royal aide les joueurs à évaluer leur connaissances en culture générale afin d'améliorer leur niveau dans ces principales matières. On considère Cerveau Royal, en conséquences, comme un jeu sérieux. </span>
                 <button class="read-more"><i class="icon-caret-down"></i></button>
             </div>
         </div>
@@ -473,8 +475,8 @@
         <div class="header-background l"></div>
         <div class="header-wrapper c valign-wrapper">
             <div class="d iv kw offset-m2 ci">
-                <h1>Second!</h1>
-                <span class="dx">Second tagline with more information.</span>
+                <h1>Index</h1>
+                <span class="dx">Chaque utilisateur a son pseudo, avatar et rank. Sur la page index, vous pouvez choisir jouer avec votre amis ou des autres utilisatuers en clickant sur StartGame directement. Les utilisateurs sont aussi permet de voir leurs profils en détail.</span>
                 <button class="read-more"><i class="icon-caret-down"></i></button>
             </div>
         </div>
@@ -483,8 +485,8 @@
         <div class="header-background l"></div>
         <div class="header-wrapper c valign-wrapper">
             <div class="d iv kw offset-m2 ci">
-                <h1>Third!</h1>
-                <span class="dx">Third tagline with more information.</span>
+                <h1>Vérifier ton Profil</h1>
+                <span class="dx">Sur la page profil, vous pouvez trouver les nombres gagnants et perdus sur tous les 8 sujets.</span>
                 <button class="read-more"><i class="icon-caret-down"></i></button>
             </div>
         </div>
@@ -493,12 +495,23 @@
         <div class="header-background l"></div>
         <div class="header-wrapper c valign-wrapper">
             <div class="d iv kw offset-m2 ci">
-                <h1>Forth!</h1>
-                <span class="dx">Third tagline with more information.</span>
+                <h1>Jouer avec votre amis</h1>
+                <span class="dx">Cerveau Royal permet d'utilisateurs jouent avec leurs amis. Vous pouvez ajouter leurs amis par l'adresse mail et les inviter de jouer ensemble. Donc Cerveau Royal est aussi consideré comme un jeu de fête.</span>
                 <button class="read-more"><i class="icon-caret-down"></i></button>
             </div>
         </div>
     </div>
+    <div class="horizontal-half-wrapper he">
+        <div class="header-background l"></div>
+        <div class="header-wrapper c valign-wrapper">
+            <div class="d iv kw offset-m2 ci">
+                <h1>Choisir votre sujet</h1>
+                <span class="dx">En clickant le bouton StartGame ou invitant votre ami, vous pouvez aller sur la page StartGame. Avant de jouer, il faut choisir un parmi 8 sujets.</span>
+                <button class="read-more"><i class="icon-caret-down"></i></button>
+            </div>
+        </div>
+    </div>
+
 
 </div>
 
