--- a/nf28.html
+++ b/nf28.html
@@ -459,6 +459,10 @@
              style="background-image:url(img/friends.PNG)"></div>
         <div class="image-container"
              style="background-image:url(img/startgame.PNG)"></div>
+        <div class="image-container"
+             style="background-image:url(img/match.png)"></div>
+        <div class="image-container"
+             style="background-image:url(img/winner.png)"></div>
     </div>
     <!--TODO add more pages here he is class left i think-->
     <div class="horizontal-half-wrapper he g">
@@ -466,7 +470,7 @@
         <div class="header-wrapper c valign-wrapper">
             <div class="d iv kw offset-m2 ci">
                 <h1>Cerveau Royal</h1>
-                <span class="dx">Le concept de Cerveau Royal consiste à répondre à des questions concernées des connaissances culturelles, géographique, historique, littérature ou bien artistique afin d’atteindre plus de points que le(s) joueur(s) adverse dans un temps plus court possible. Cerveau Royal aide les joueurs à évaluer leur connaissances en culture générale afin d'améliorer leur niveau dans ces principales matières. On considère Cerveau Royal, en conséquences, comme un jeu sérieux. </span>
+                <span class="dx">Le concept de Cerveau Royal consiste à répondre à des questions. Il aide les joueurs à évaluer leur connaissances en culture générale afin d'améliorer leur niveau dans ces principales matières. On considère Cerveau Royal, en conséquences, comme un jeu sérieux. </span>
                 <button class="read-more"><i class="icon-caret-down"></i></button>
             </div>
         </div>
@@ -507,6 +511,26 @@
             <div class="d iv kw offset-m2 ci">
                 <h1>Choisir votre sujet</h1>
                 <span class="dx">En clickant le bouton StartGame ou invitant votre ami, vous pouvez aller sur la page StartGame. Avant de jouer, il faut choisir un parmi 8 sujets.</span>
+                <button class="read-more"><i class="icon-caret-down"></i></button>
+            </div>
+        </div>
+    </div>
+    <div class="horizontal-half-wrapper">
+        <div class="header-background l"></div>
+        <div class="header-wrapper c valign-wrapper">
+            <div class="d iv kw offset-m2 ci">
+                <h1>In Gaming</h1>
+                <span class="dx">Les questions à répondre sont sous forme de QCM. Les joueurs peuvent gagner les points d'après leur réponses et aussi le temps restant. Généralement, il y a 10 questions à répondre et 15 seconds pour chaque questions.</span>
+                <button class="read-more"><i class="icon-caret-down"></i></button>
+            </div>
+        </div>
+    </div>
+    <div class="horizontal-half-wrapper he">
+        <div class="header-background l"></div>
+        <div class="header-wrapper c valign-wrapper">
+            <div class="d iv kw offset-m2 ci">
+                <h1>A la fin</h1>
+                <span class="dx">Après 10 questions, le joueur qui a eu le plus de point va gagner. Le résultat va être enregistré dans votre profil et vous pouvez choisir de rejouer avec le même joueur.</span>
                 <button class="read-more"><i class="icon-caret-down"></i></button>
             </div>
         </div>
