--- a/nf28.html
+++ b/nf28.html
@@ -73,7 +73,6 @@
     }
 
     .additional-checkout-button--apple-pay .additional-checkout-button__logo {
-        background: -webkit-named-image(apple-pay-logo-white) center center no-repeat !important;
         background-size: auto 100% !important;
         display: inline-block !important;
         vertical-align: middle !important;
@@ -418,30 +417,20 @@
 <!--TODO href to position of page-->
 <nav class="n bi fj">
     <div class="nav-wrapper">
-        <a href="startup-horizontal-half.html" class="brand-logo"><i class="icon-diamond white-text"></i></a>
+        <a  class="brand-logo"><i class="icon-diamond white-text"></i></a>
         <ul id="nav-mobile" class="ag hide-on-med-and-down">
-            <li class="active"><a class="dropdown-button" href="#!" data-activates="pages" data-constrainWidth="false"
-                                  data-belowOrigin="true">Démostration<i class="material-icons ag">arrow_drop_down</i></a></li>
-            <li><a href="startup-blog.html">Axe d'amélioration</a></li>
-            <li><a href="startup-team.html">Techniques utilisées</a></li>
+            <li ><a href="#top" >Démostration</a></li>
+            <li><a href="#amelioration">Axe d'amélioration</a></li>
+            <li><a href="#technique">Techniques utilisées</a></li>
         </ul>
 
-        <ul id="pages" class="dropdown-content">
-            <li><a class="g" href="startup-horizontal-half.html">Horizontal Halves</a></li>
-            <li><a href="startup-zoom-out.html">Zoom Out</a></li>
-            <li><a href="startup-circle-reveal.html">Circle Reveal</a></li>
-            <li><a href="startup-phone-wall.html">Phone Wall</a></li>
-            <li><a href="startup-element-transitions.html">Element Transitions</a></li>
-            <li><a href="startup-basic-elements.html">Basic Elements</a></li>
-            <li><a href="startup-shuffle.html">Shuffle</a></li>
-            <li><a href="startup-postcard.html">Postcards</a></li>
-        </ul>
+
 
         <a href="#" data-activates="slide-out" class="button-collapse ag"><i class="material-icons white-text">menu</i></a>
     </div>
 </nav>
 </ul>
-
+<a name="top"></a>
 <div class="ai full-height fh">
     <div class="bz">
         <img src="//cdn.shopify.com/s/files/1/1775/8583/t/1/assets/trees.jpg?0" alt="">
@@ -475,7 +464,7 @@
             </div>
         </div>
     </div>
-    <div class="horizontal-half-wrapper">
+    <div class="horizontal-half-wrapper" >
         <div class="header-background l"></div>
         <div class="header-wrapper c valign-wrapper">
             <div class="d iv kw offset-m2 ci">
@@ -485,27 +474,27 @@
             </div>
         </div>
     </div>
-    <div class="horizontal-half-wrapper he">
+    <div class="horizontal-half-wrapper he" >
         <div class="header-background l"></div>
         <div class="header-wrapper c valign-wrapper">
             <div class="d iv kw offset-m2 ci">
-                <h1>Vérifier ton Profil</h1>
+                <h1>Vérifier votre Profil</h1>
                 <span class="dx">Sur la page profil, vous pouvez trouver les nombres gagnants et perdus sur tous les 8 sujets.</span>
                 <button class="read-more"><i class="icon-caret-down"></i></button>
             </div>
         </div>
     </div>
-    <div class="horizontal-half-wrapper">
+    <div class="horizontal-half-wrapper" >
         <div class="header-background l"></div>
         <div class="header-wrapper c valign-wrapper">
             <div class="d iv kw offset-m2 ci">
-                <h1>Jouer avec votre amis</h1>
+                <h1>Jouer avec vos amis</h1>
                 <span class="dx">Cerveau Royal permet d'utilisateurs jouent avec leurs amis. Vous pouvez ajouter leurs amis par l'adresse mail et les inviter de jouer ensemble. Donc Cerveau Royal est aussi consideré comme un jeu de fête.</span>
                 <button class="read-more"><i class="icon-caret-down"></i></button>
             </div>
         </div>
     </div>
-    <div class="horizontal-half-wrapper he">
+    <div class="horizontal-half-wrapper he" >
         <div class="header-background l"></div>
         <div class="header-wrapper c valign-wrapper">
             <div class="d iv kw offset-m2 ci">
@@ -515,7 +504,7 @@
             </div>
         </div>
     </div>
-    <div class="horizontal-half-wrapper">
+    <div class="horizontal-half-wrapper" >
         <div class="header-background l"></div>
         <div class="header-wrapper c valign-wrapper">
             <div class="d iv kw offset-m2 ci">
@@ -525,7 +514,7 @@
             </div>
         </div>
     </div>
-    <div class="horizontal-half-wrapper he">
+    <div class="horizontal-half-wrapper he" >
         <div class="header-background l"></div>
         <div class="header-wrapper c valign-wrapper">
             <div class="d iv kw offset-m2 ci">
@@ -538,12 +527,12 @@
 
 
 </div>
-
+<a name="amelioration"></a>
 <div class="v valign-wrapper">
     <div class="c ci">
         <div class="d iv jc offset-m1">
             <div class="c">
-                <div class="d iv"><h2 class="section-title">Axe d'amélioration</h2></div>
+                <div class="d iv" ><h2 class="section-title">Axe d'amélioration</h2></div>
                 <div class="d iv jo kk">
                     <h4><i class="icon-game"></i></h4>
                     <p class="ek"> Présenter la photo de profile à côté d’option pour indiquer qui a choisi quoi.</p>
@@ -577,9 +566,9 @@
     </div>
 </div>
 
-
+<a name="technique"></a>
 <div class="v r full-height">
-    <div class="c">
+    <div class="c" >
         <div class="d iv jc offset-m1 ef">
             <h1>Techniques utilisées</h1>
             <div class="c masonry-grid">
